plugins {
    id 'java'
}

allprojects {
    group 'kasanari'
    version '0.1.0'

    repositories {
        mavenCentral()
        mavenLocal()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        implementation libs.slf4j

        testImplementation libs.logback
        testImplementation platform(libs.junit.bom)
        testImplementation libs.junit
        testRuntimeOnly libs.junit.platform.launcher
    }

    compileJava {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-parameters'
    }

    compileTestJava {
        options.encoding = 'UTF-8'
    }
}

